--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   },
   "dependencies": {
     "expo": "~50.0.13",
+    "expo-av": "~13.10.5",
+    "expo-file-system": "^16.0.8",
+    "expo-sqlite": "~13.3.0",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.5"
+    "react-native": "0.73.5",
+    "react-native-gesture-handler": "^2.15.0",
+    "react-native-haptics": "^0.0.0",
+    "react-native-orientation": "^3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
