--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.13",
+    "@expo/vector-icons": "^14.0.0",
+    "expo": "^50.0.14",
     "expo-av": "~13.10.5",
     "expo-file-system": "^16.0.8",
-    "expo-sqlite": "~13.3.0",
+    "expo-splash-screen": "~0.26.4",
+    "expo-sqlite": "^13.4.0",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.5",
+    "react-native": "^0.73.6",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-haptics": "^0.0.0",
     "react-native-orientation": "^3.1.3"
