--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo": "^50.0.14",
     "expo-av": "~13.10.5",
     "expo-file-system": "^16.0.8",
+    "expo-haptics": "^12.8.1",
     "expo-splash-screen": "~0.26.4",
     "expo-sqlite": "^13.4.0",
     "expo-status-bar": "~1.11.1",
